<resources>
    <string name="app_name">COVIDn\'t</string>
    <string name="title_news">News</string>
    <string name="title_temperature">Temperature</string>
    <string name="title_travel">Travel</string>
    <string name="title_clusters">Locations</string>
    <string name="title_settings">Settings</string>
    <string name="localNewsTab">LOCAL</string>
    <string name="globalNewsTab">GLOBAL</string>
    <string name="statisticsTab">STATS</string>
    <string name="customNewsTab">SCHOOL</string>
    <string name="settings_theme">Dark mode</string>
    <string name="emailHint">Enter NUSH email</string>
    <string name="passwordHint">Password</string>
    <string name="temperatureHint">°C</string>
    <string name="loginBtn">LOGIN</string>
    <string name="logoutBtn">LOGOUT</string>
    <string name="signUpBtn">SIGN UP</string>
    <string name="loginSubmitBtn">LOGIN</string>
    <string name="temperatureSubmitBtn">SUBMIT</string>
    <string name="noTemp">No temperatures recorded</string>
    <string name="noUser">Please log-in to use this feature.</string>
    <string name="travel_dateHint">Date of leaving</string>
    <string name="travel_durationHint">Duration (days)</string>
    <string name="travel_cityHint">Destination city</string>
    <string name="travel_countryHint">Destination country</string>
    <string-array name="newsLanguages">
        <item>English</item>
        <item>French</item>
        <item>Spanish</item>
        <item>German</item>
    </string-array>
    <string name="attributions">Powered by newsapi.org \n
    Icon \'double-ring\' from loading.io \n
    You are a failure</string>
    <string name="shareBtn">Share</string>
    <string name="channel_name">Temperature taking</string>
    <string name="channel_description">Make sound</string>
    <string name="notif_temperatureTitle">Measure your temperature!</string>
    <string name="notif_temperatureContent">Or else you will eventually drown in your bodily fluids</string>
    <string name="dorscon">DORSCON</string>
    <string name="hospitalised_c">Hospitalised (Critical)</string>
    <string name="hospitalised_s">Hospitalised (Stable)</string>
    <string name="death">Death</string>
    <string name="discharged">Discharged</string>
    <string name="cases">Confirmed cases</string>
    <string name="lastUpdated">Last updated</string>
    <string name="deathProb">Probability of death</string>
    <string name="newsLangText">News language:</string>
    <string name="clusters_locationHint">Location</string>
    <string name="clusters_casesHint">Cases</string>
    <string name="addClusterHint">ADD NEW CLUSTER</string>
    <string name="internetFailure">CRITICAL INTERNET FAILURE!\n
    Please reconnect</string>
    <string name="updateClinicsBtn">UPDATE CLINICS</string>
    <string name="clinicSwitchOn">CLINIC</string>
    <string name="clinicSwitchOff">CLUSTER</string>
    <string name="dialBtn">DIAL</string>
</resources>