<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_new_releases_black_24dp"
        android:title="@string/title_news" />

    <item
        android:id="@+id/navigation_temperature"
        android:icon="@drawable/ic_ac_unit_black_24dp"
        android:title="@string/title_temperature" />

    <item
        android:id="@+id/navigation_travel"
        android:icon="@drawable/ic_airplanemode_active_black_24dp"
        android:title="@string/title_travel" />

    <item
        android:id="@+id/navigation_clusters"
        android:icon="@drawable/ic_pin_drop_black_24dp"
        android:title="@string/title_clusters" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_settings" />
</menu>
