<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="50dp"
    android:paddingTop="30dp">

    <EditText
        android:id="@+id/durationText"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/travel_durationHint"
        android:inputType="number"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/destCityText"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/travel_cityHint"
        android:inputType="text"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/destCountryText"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/travel_countryHint"
        android:inputType="text"
        android:textSize="16sp" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/travelSubmitBtn"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:text="@string/temperatureSubmitBtn" />
</LinearLayout>