<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="50dp"
    android:paddingTop="30dp">

    <EditText
        android:id="@+id/emailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:text="@string/loginSubmitBtn" />
</LinearLayout>