<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <Switch
        android:id="@+id/darkModeSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:paddingHorizontal="10dp"
        android:switchPadding="10dp"
        android:text="@string/settings_theme"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/newsLangSpinner"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/loginBtn" />

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:text="@string/signUpBtn" />

</LinearLayout>